--- a/projects/cordova/SimpleSample/www/index.html
+++ b/projects/cordova/SimpleSample/www/index.html
@@ -41,7 +41,7 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Device is now Ready</p>
             </div>
             <textarea id="data" rows="10" cols="50"></textarea>
         </div>
